# gryffinwowlauncher

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
