[package]
name = "launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "window-start-dragging", "fs-read-file", "shell-all", "process-all", "path-all", "fs-read-dir", "dialog-all", "window-minimize", "window-close", "fs-write-file"] }
reqwest = { version = "0.11", features = ["stream", "blocking", "json"] }
futures-util = "0.3"
tokio = { version = "1.0", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
